--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="iconSize">
        <size>
@@ -1135,7 +1135,7 @@
              <string>查询</string>
             </property>
             <property name="default">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
