增加进货记录功能

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>4</number>
       </property>
       <property name="iconSize">
        <size>
@@ -395,17 +395,6 @@
          <property name="text">
           <string> 新建供应商</string>
          </property>
-        </widget>
-        <widget class="QWidget" name="layoutWidget">
-         <property name="geometry">
-          <rect>
-           <x>200</x>
-           <y>140</y>
-           <width>244</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2"/>
         </widget>
        </widget>
        <widget class="QLabel" name="sname_label">
@@ -1617,7 +1606,7 @@
           </rect>
          </property>
          <property name="text">
-          <string>销售单价</string>
+          <string>进货单价</string>
          </property>
         </widget>
         <widget class="QSpinBox" name="stock_cnt_spinBox">
@@ -1817,7 +1806,7 @@
           <string>供应商</string>
          </property>
         </widget>
-        <widget class="QComboBox" name="stock_customer_comboBox">
+        <widget class="QComboBox" name="stock_supplier_comboBox">
          <property name="geometry">
           <rect>
            <x>640</x>
@@ -1999,6 +1988,9 @@
          </property>
          <property name="text">
           <string>否</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
         <widget class="QCheckBox" name="stock_invoice_checkBox">
